--- a/Desafios/Nivel 03/Desafio 01 - Stone/main.css
+++ b/Desafios/Nivel 03/Desafio 01 - Stone/main.css
@@ -159,7 +159,7 @@ body {
   justify-content: center;
   gap: 40px;
 
-  background-color: #F7F9FD;
+  background-color: #fff;
 }
 
 .container-frame02 img {
@@ -206,7 +206,7 @@ body {
   justify-content: center;
   gap: 42px;
 
-  background-color: #F7F9FD;
+  background-color: #fff;
 }
 
 .text-frame03 {
