--- a/Desafios/Nivel 03/Desafio 02 - Mercado Pago/main.css
+++ b/Desafios/Nivel 03/Desafio 02 - Mercado Pago/main.css
@@ -18,10 +18,13 @@ body {
 
 /**---------------HEADER----------------**/
 
+.main-container {
+  background: url(./assets-mercadopago/3c274750861afa486b9c\ 1.png) no-repeat;
+}
+
 .header-container {
   background-color: #fff;
   padding: 22px 33px;
-
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -78,23 +81,21 @@ body {
 /**---------------FRAME02----------------**/
 
 .frame02 {
-  position: relative;
+  margin-top: 65px;
+  margin-bottom: 45px;
 }
 
 .text-frame02 {
-  width: 369px;
   display: flex;
   flex-direction: column;
   align-items: left;
   justify-content: center;
   padding: 0 120px;
   gap: 8px;
-
-  position: absolute;
-  top: 114px;
 }
 
 .title-text {
+  width: 325px;
   font-weight: 800;
   font-size: 40px;
   line-height: 44px;
@@ -109,6 +110,8 @@ body {
   background-color: #fff;
   padding: 18px;
   border-radius: 4px;
+  width: 370px;
+  
 }
 
 .text-field {
@@ -137,9 +140,7 @@ body {
   align-items: center;
   justify-content: center;
   gap: 28px;
-  position: absolute;
-  bottom: 70px;
-  padding-left: 120px;height: 256px;
+  margin-bottom: 70px;
 }
 
 .card {
@@ -152,8 +153,6 @@ body {
   border: 2px solid #E5E5E5;
   border-radius: 8px;
   width: 458px;
-  
-
 }
 
 .sub-title {
@@ -175,14 +174,6 @@ body {
   justify-content: center;
   text-decoration: none;
   margin-top: 20px;
-}
-
-.main-container {
-  position: relative;
-}
-
-.frame04 {
-  height: 256px;
 }
 
 /**---------------FOOTER----------------**/
